Fix timestamp and add to collection button z-index

--- a/css/focus_page.styl
+++ b/css/focus_page.styl
@@ -80,6 +80,10 @@
     position: relative;
     float: left;
     width: 33%;
+    
+    .add-to-collection {
+      z-index: 1;
+    }
 
     .main {
       max-width: 100%;
